[tool.poetry]
name = "explore"
version = "0.1.0"
description = ""
authors = ["karthik <karthikkannan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "*"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
